checkpoint for pch

--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -23,6 +23,8 @@ add_sources("Code_uber.cpp"
         "GamePlugin.h"
 		"GamePlugin.cpp"
 
+        "pch_ceblankfs.h"
+
 		"StdAfx.h"
 		"StdAfx.cpp"
 )
