--- a/Assets/libs/environmentpresets/example.env
+++ b/Assets/libs/environmentpresets/example.env
@@ -1,4 +1,4 @@
-<EnvironmentPreset CryXmlVersion="2" version="2">
+<EnvironmentPreset CryXmlVersion="2" version="4">
  <var id="PARAM_SUN_COLOR" type="TYPE_COLOR" minValue="0" maxValue="1">
   <spline0 keys="0:0.0915184:0:0:0.00320887:0.027873:4:4:0,18000:0.101145:0.127943:0.0726263:0.127943:0.0726263:0:0:0,36000:0.859174:0.174215:0.0900367:0.116143:0.0600243:0:0:0,48000:0.972221:0.0376823:0.0326813:-6.36776e-05:0.00106434:4:4:0,48923:0.97203:-6.36776e-05:0.00106434:0.000395:0.0233217:4:4:0,65156:0.973215:0.000395:0.0233217:-0.00246666:0.00183467:4:4:0,72000:0.965815:-0.00607252:-0.00911627:-0.0319411:-0.0479511:0:0:0,108000:0.859174:-0.226098:-0.163845:-0.0188412:-0.0136535:0:0:0,111000:0.230998:-0.209392:-0.118596:-0.0479506:-0.0266563:4:4:0,120182:0.0871463:-0.0479506:-0.0266563:0.00145737:0:4:4:0,144000:0.0915184:0.00145737:0:0:0:0:0:0,"/>
   <spline1 keys="0:0.124741:0:0:0.00320887:0.027873:4:4:0,18000:0.20836:0.127943:0.0726263:0.127943:0.0726263:0:0:0,36000:0.560499:0.174215:0.0900367:0.116143:0.0600243:0:0:0,48000:0.658543:0.0376823:0.0326813:-6.36776e-05:0.00106434:4:4:0,48923:0.661736:-6.36776e-05:0.00106434:0.000395:0.0233217:4:4:0,65156:0.731701:0.000395:0.0233217:-0.00246666:0.00183467:4:4:0,72000:0.737205:-0.00607252:-0.00911627:-0.0319411:-0.0479511:0:0:0,108000:0.560499:-0.226098:-0.163845:-0.0188412:-0.0136535:0:0:0,111000:0.20471:-0.209392:-0.118596:-0.0479506:-0.0266563:4:4:0,120182:0.124741:-0.0479506:-0.0266563:0.00145737:0:4:4:0,144000:0.124741:0.00145737:0:0:0:0:0:0,"/>
@@ -11,6 +11,36 @@
  </var>
  <var id="PARAM_SUN_SPECULAR_MULTIPLIER" type="TYPE_FLOAT" minValue="0" maxValue="4">
   <spline0 keys="0:4:0:0:-1:0:4:4:0,36000:1:-0.805556:0:-0.268518:0:0:0:0,48000:0.777779:-0.0740737:0:0.002912:0:4:4:0,48923:0.786515:0.002912:0:0.0564203:0:4:4:0,65156:0.955776:0.0564203:0:0.0147413:0:4:4:0,72000:1:0.00235487:0:0.0123865:0:0:0:0,108000:1:0.5:0:0.5:0:0:0:0,144000:4:1:0:0:0:0:0:0,"/>
+  <spline1 keys=""/>
+  <spline2 keys=""/>
+ </var>
+ <var id="PARAM_SKYBOX_ANGLE" type="TYPE_FLOAT" minValue="0" maxValue="360">
+  <spline0 keys="0:0:0:0:0:0:0:0:0,144000:0:0:0:0:0:0:0:0,"/>
+  <spline1 keys=""/>
+  <spline2 keys=""/>
+ </var>
+ <var id="PARAM_SKYBOX_STRETCHING" type="TYPE_FLOAT" minValue="0" maxValue="4">
+  <spline0 keys="0:1:0:0:0:0:0:0:0,144000:1:0:0:0:0:0:0:0,"/>
+  <spline1 keys=""/>
+  <spline2 keys=""/>
+ </var>
+ <var id="PARAM_SKYBOX_COLOR" type="TYPE_COLOR" minValue="0" maxValue="1">
+  <spline0 keys="0:1:0:0:0:0:0:0:0,144000:1:0:0:0:0:0:0:0,"/>
+  <spline1 keys="0:0.972549:0:0:0:0:0:0:0,144000:0.972549:0:0:0:0:0:0:0,"/>
+  <spline2 keys="0:0.972549:0:0:0:0:0:0:0,144000:0.972549:0:0:0:0:0:0:0,"/>
+ </var>
+ <var id="PARAM_SKYBOX_INTENSITY" type="TYPE_FLOAT" minValue="0" maxValue="20000">
+  <spline0 keys="0:19800:0:0:0:0:0:0:0,144000:19800:0:0:0:0:0:0:0,"/>
+  <spline1 keys=""/>
+  <spline2 keys=""/>
+ </var>
+ <var id="PARAM_SKYBOX_FILTER" type="TYPE_COLOR" minValue="0" maxValue="1">
+  <spline0 keys="0:1:0:0:0:0:0:0:0,144000:1:0:0:0:0:0:0:0,"/>
+  <spline1 keys="0:1:0:0:0:0:0:0:0,144000:1:0:0:0:0:0:0:0,"/>
+  <spline2 keys="0:1:0:0:0:0:0:0:0,144000:1:0:0:0:0:0:0:0,"/>
+ </var>
+ <var id="PARAM_SKYBOX_OPACITY" type="TYPE_FLOAT" minValue="0" maxValue="1">
+  <spline0 keys="0:1:0:0:0:0:0:0:0,144000:1:0:0:0:0:0:0:0,"/>
   <spline1 keys=""/>
   <spline2 keys=""/>
  </var>
@@ -694,4 +724,18 @@
   <spline1 keys=""/>
   <spline2 keys=""/>
  </var>
+ <Constants>
+  <Sun Latitude="240" Longitude="90" SunLinkedToTOD="true"/>
+  <Moon Latitude="240" Longitude="45" Size="0.5" Texture="%ENGINE%/EngineAssets/Textures/Skys/Night/half_moon.dds"/>
+  <Sky MaterialDef="" MaterialLow=""/>
+  <Wind BreezeEnabled="false" BreezeStrength="1" BreezeVariance="1" BreezeLifeTime="15" BreezeCount="4" BreezeRadius="5" BreezeSpawnRadius="25" BreezeSpread="0" BreezeMovementSpeed="8" BreezeAwakeThreshold="0" BreezeFixedHeight="-1">
+   <WindVector x="1" y="0" z="0"/>
+  </Wind>
+  <CloudShadows Texture="" Tiling="1" Brightness="1" Invert="false">
+   <Speed x="0" y="0" z="0"/>
+  </CloudShadows>
+  <ColorGrading UseStaticTexture="false" Texture=""/>
+  <TotalIllumination Active="false" InjectionMultiplier="1" SkyColorMultiplier="1" UseTODSkyColor="0.5" SpecularAmplifier="1" DiffuseBias="0.050000001" ConeMaxLength="12" UpdateGeometry="false" MinNodeSize="8" LowSpecMode="-2" SSAOAmount="0.69999999"/>
+  <TotalIlluminationAdv IntegrationMode="0" PortalsDeform="0" PortalsInject="0" DiffuseAmplifier="1" SpecularFromDiffuse="false" NumberOfBounces="1" Saturation="0.80000001" PropagationBooster="1.5" DiffuseConeWidth="24" UpdateLighting="false" HalfresKernelPrimary="false" HalfresKernelSecondary="true" UseLightProbes="false" VoxelizationLODRatio="1" VoxelizationMapBorder="0" VoxelPoolResolution="128" ObjectsMaxViewDistance="48" SunRSMInject="0" SSDepthTrace="0" ShadowsFromSun="false" ShadowsSoftness="1.25" ShadowsFromHeightmap="false" Troposphere_Active="false" Troposphere_Brightness="1" Troposphere_Density="1" AnalyticalOccluders="false" AnalyticalGI="false" TraceVoxels="true" StreamVoxels="false" TranslucentBrightness="2.5" PointLightsBias="0.2" HighGlossOcclusion="0"/>
+ </Constants>
 </EnvironmentPreset>
