--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -18,8 +18,10 @@ add_sources("Code_uber.cpp"
     PROJECTS ceblankfs
     SOURCE_GROUP "Root"
 		"GamePlugin.cpp"
+		"PCH.cpp"
 		"StdAfx.cpp"
 		"GamePlugin.h"
+		"PCH.h"
 		"StdAfx.h"
 )
 add_sources("configs_uber.cpp"
@@ -37,35 +39,26 @@ add_sources("entities_uber.cpp"
 add_sources("players_uber.cpp"
     PROJECTS ceblankfs
     SOURCE_GROUP "players"
-        "players/_PRegistrar.cpp"
-		
-        "players/PCore.cpp"
-		"players/PCore_Handler.cpp"
-		"players/PCore_Initialize.cpp"
-		
-        "players/PCore.h"
-		
-        "players/PData.h"
-		
-        "players/PInput.h"
-		
-        "players/PProjectile.cpp"
-        "players/PProjectile.h"
-		
-        "players/PSpawnPoint.cpp"
-        "players/PSpawnPoint.h"
+		"players/PCore.cpp"
+		"players/PHandler.cpp"
+		"players/PInitialize.cpp"
+		"players/PProjectile.cpp"
+		"players/PSpawnPoint.cpp"
+		"players/PCore.h"
+		"players/PData.h"
+		"players/PInput.h"
+		"players/PProjectile.h"
+		"players/PSpawnPoint.h"
 )
 add_sources("systems_uber.cpp"
     PROJECTS ceblankfs
     SOURCE_GROUP "systems"
-        "systems/SGlobalEnvironment.cpp"
-        "systems/SGlobalEnvironment.h"
-
+		"systems/SGlobalEnvironment.cpp"
+		"systems/SGraphicManager.cpp"
 		"systems/SLevelManager.cpp"
-		"systems/SLevelManager.h"
-
-        "systems/SGraphicManager.cpp"
+		"systems/SGlobalEnvironment.h"
 		"systems/SGraphicManager.h"
+		"systems/SLevelManager.h"
 )
 add_sources("tools_uber.cpp"
     PROJECTS ceblankfs
