--- a/Assets/libs/environmentpresets/example.env
+++ b/Assets/libs/environmentpresets/example.env
@@ -728,14 +728,14 @@
   <Sun Latitude="240" Longitude="90" SunLinkedToTOD="true"/>
   <Moon Latitude="240" Longitude="45" Size="0.5" Texture="%ENGINE%/EngineAssets/Textures/Skys/Night/half_moon.dds"/>
   <Sky MaterialDef="" MaterialLow=""/>
-  <Wind BreezeEnabled="false" BreezeStrength="1" BreezeVariance="1" BreezeLifeTime="15" BreezeCount="4" BreezeRadius="5" BreezeSpawnRadius="25" BreezeSpread="0" BreezeMovementSpeed="8" BreezeAwakeThreshold="0" BreezeFixedHeight="-1">
+  <Wind BreezeEnabled="true" BreezeStrength="1" BreezeVariance="1" BreezeLifeTime="15" BreezeCount="4" BreezeRadius="5" BreezeSpawnRadius="25" BreezeSpread="0" BreezeMovementSpeed="8" BreezeAwakeThreshold="0" BreezeFixedHeight="-1">
    <WindVector x="1" y="0" z="0"/>
   </Wind>
   <CloudShadows Texture="" Tiling="1" Brightness="1" Invert="false">
    <Speed x="0" y="0" z="0"/>
   </CloudShadows>
   <ColorGrading UseStaticTexture="false" Texture=""/>
-  <TotalIllumination Active="false" InjectionMultiplier="1" SkyColorMultiplier="1" UseTODSkyColor="0.5" SpecularAmplifier="1" DiffuseBias="0.050000001" ConeMaxLength="12" UpdateGeometry="false" MinNodeSize="8" LowSpecMode="-2" SSAOAmount="0.69999999"/>
-  <TotalIlluminationAdv IntegrationMode="0" PortalsDeform="0" PortalsInject="0" DiffuseAmplifier="1" SpecularFromDiffuse="false" NumberOfBounces="1" Saturation="0.80000001" PropagationBooster="1.5" DiffuseConeWidth="24" UpdateLighting="false" HalfresKernelPrimary="false" HalfresKernelSecondary="true" UseLightProbes="false" VoxelizationLODRatio="1" VoxelizationMapBorder="0" VoxelPoolResolution="128" ObjectsMaxViewDistance="48" SunRSMInject="0" SSDepthTrace="0" ShadowsFromSun="false" ShadowsSoftness="1.25" ShadowsFromHeightmap="false" Troposphere_Active="false" Troposphere_Brightness="1" Troposphere_Density="1" AnalyticalOccluders="false" AnalyticalGI="false" TraceVoxels="true" StreamVoxels="false" TranslucentBrightness="2.5" PointLightsBias="0.2" HighGlossOcclusion="0"/>
+  <TotalIllumination Active="true" InjectionMultiplier="1" SkyColorMultiplier="1" UseTODSkyColor="0.5" SpecularAmplifier="1" DiffuseBias="0.050000001" ConeMaxLength="12" UpdateGeometry="false" MinNodeSize="8" LowSpecMode="-2" SSAOAmount="0.69999999"/>
+  <TotalIlluminationAdv IntegrationMode="0" PortalsDeform="0" PortalsInject="0" DiffuseAmplifier="1" SpecularFromDiffuse="true" NumberOfBounces="1" Saturation="0.80000001" PropagationBooster="1.5" DiffuseConeWidth="24" UpdateLighting="true" HalfresKernelPrimary="false" HalfresKernelSecondary="true" UseLightProbes="true" VoxelizationLODRatio="1" VoxelizationMapBorder="0" VoxelPoolResolution="128" ObjectsMaxViewDistance="48" SunRSMInject="0" SSDepthTrace="0" ShadowsFromSun="false" ShadowsSoftness="1.25" ShadowsFromHeightmap="false" Troposphere_Active="false" Troposphere_Brightness="1" Troposphere_Density="1" AnalyticalOccluders="false" AnalyticalGI="false" TraceVoxels="true" StreamVoxels="false" TranslucentBrightness="2.5" PointLightsBias="0.2" HighGlossOcclusion="0"/>
  </Constants>
 </EnvironmentPreset>
